objects/SpaceGroup__c.object
<CustomObject>
    <description>&lt;SPG&gt; - Represents a grouping of spaces eg. Sales Precinct, Development Project</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChildRentalArea__c</fullName>
        <formula>ChildSpace__r.RentableArea__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Rental Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChildSpaceType__c</fullName>
        <formula>TEXT(ChildSpace__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Space Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChildSpace__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Space</label>
        <referenceTo>Space__c</referenceTo>
        <relationshipLabel>Space Groups (Child Space)</relationshipLabel>
        <relationshipName>Space_Groups2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <inlineHelpText>This is the achieved date of the first child Space.</inlineHelpText>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ParentRentableArea__c</fullName>
        <formula>ParentSpace__r.RentableArea__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Rentable Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentSpaceType__c</fullName>
        <formula>TEXT( ParentSpace__r.Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Space Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentSpace__c</fullName>
        <label>Parent Space</label>
        <referenceTo>Space__c</referenceTo>
        <relationshipLabel>Space Groups (Parent Space)</relationshipLabel>
        <relationshipName>Space_Groups3</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <formula>ChildSpace__r.Property__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpaceGroupNumber__c</fullName>
        <description>Same group number for the group saved.</description>
        <inlineHelpText>This is the unique identifier for the reconfiguration group.</inlineHelpText>
        <label>Space Group Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SpaceGroupReport__c</fullName>
        <formula>HYPERLINK(&quot;/one/one.app#/sObject/&quot;&amp; $Label.ReconfigReportId&amp; &quot;?fv0=&quot; &amp;  TEXT(SpaceGroupNumber__c) , &quot;Reconfiguration Group&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Space Group Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMImportDateTime__c</fullName>
        <label>Tech_DMImportDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TechDMOriginalSourceSystem__c</fullName>
        <label>Tech_DMOriginalSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMReleaseNo__c</fullName>
        <label>Tech_DMReleaseNo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceID__c</fullName>
        <label>Tech_DMSourceID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceSystem__c</fullName>
        <label>Tech_DMSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMXREFId__c</fullName>
        <externalId>true</externalId>
        <label>Tech_DMXREF_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Reconfiguration - Split</fullName>
                </value>
                <value>
                    <fullName>Reconfiguration - Merge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Space Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Property__c</columns>
        <columns>SpaceGroupNumber__c</columns>
        <columns>NAME</columns>
        <columns>ChildSpace__c</columns>
        <columns>ParentSpace__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>equals</operation>
            <value>Helensvale</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Space_Group_by_Centre</fullName>
        <columns>Property__c</columns>
        <columns>SpaceGroupNumber__c</columns>
        <columns>NAME</columns>
        <columns>ChildSpace__c</columns>
        <columns>ParentSpace__c</columns>
        <columns>Active__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>contains</operation>
            <value>Hurstville</value>
        </filters>
        <label>Space Group by Centre</label>
    </listViews>
    <listViews>
        <fullName>Space_Group_by_Number</fullName>
        <columns>Property__c</columns>
        <columns>SpaceGroupNumber__c</columns>
        <columns>NAME</columns>
        <columns>ChildSpace__c</columns>
        <columns>ParentSpace__c</columns>
        <columns>Active__c</columns>
        <columns>EffectiveDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SpaceGroupNumber__c</field>
            <operation>equals</operation>
            <value>155</value>
        </filters>
        <label>Space Group by Number</label>
    </listViews>
    <nameField>
        <label>Space Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Space Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>